--- a/mcavatar/templates/index.html
+++ b/mcavatar/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>MCAvatar</title>
+    <title>Minecraft Avatars &middot; MCAvatar</title>
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
