Set pre and img to display: block when the screen isn't wide enough to show them side by side

--- a/mcavatar/static/style.css
+++ b/mcavatar/static/style.css
@@ -86,3 +86,11 @@ a:hover {
     border: 1px solid #555;
     margin-right: 5px;
 }
+
+@media all and (max-width: 600px) {
+
+    img, pre {
+        display: block;
+    }
+
+}
