Add gaug.es tracking code

--- a/mcavatar/templates/index.html
+++ b/mcavatar/templates/index.html
@@ -55,6 +55,20 @@
 
 </body>
 <script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '51966daaf5a1f54de4000037');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
+
+<script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-26424587-1']);
   _gaq.push(['_setDomainName', 'buttscicl.es']);
